--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Player.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Player.html
@@ -5,15 +5,16 @@
     <!-- Add your CSS and JavaScript files here -->
 </head>
 <body>
-    <h1>Song Details</h1>
-    <h2 th:text="${song.title}"></h2>
-    <img th:src="@{/FileHandler(fileName=${album.image})}" />
-    <!-- Display other details of the song such as artist, album, year, genre, etc. -->
-    <p>Artist: <span th:text="${album.interpreter}"></span></p>
-    <p>Album: <span th:text="${album.title}"></span></p>
-    <p>Album Year: <span th:text="${album.publicationYear}"></span></p>
-    <p>Genre: <span th:text="${song.genre}"></span></p>
-    <!-- Add an audio player for song playback -->
-    <audio th:src="@{/FileHandler(fileName=${song.audio})}" controls></audio>
+	<div class ="playerSong">
+	    <h1 th:text="${song.title}"></h1>
+	    <img th:src="@{/FileHandler(fileName=${album.image})}" />
+	    <!-- Display other details of the song such as artist, album, year, genre, etc. -->
+	    <p>Artist: <span th:text="${album.interpreter}"></span></p>
+	    <p>Album: <span th:text="${album.title}"></span></p>
+	    <p>Album Year: <span th:text="${album.publicationYear}"></span></p>
+	    <p>Genre: <span th:text="${song.genre}"></span></p>
+	    <!-- Add an audio player for song playback -->
+	    <audio th:src="@{/FileHandler(fileName=${song.audio})}" controls></audio>
+    </div>
 </body>
 </html>
