--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Login.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Login.html
@@ -2,27 +2,28 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Authentication page</title>
+    <link rel="stylesheet" th:href="@{/static/css/style.css}" />
 </head>
 <body>
 	<h1>Authentication page</h1>
-	<div class="formdiv">
+	<div class="compartment">
 		<h2>Sign-in module</h2>
 		<form action="#" th:action="@{/LoginUser}" method="POST">
-			<fieldset>
+			<div class ="content">
 				<p> Username: <input type="text" name="username" required /> </p>
 				<p> Password: <input type="password" name="password" required /> </p>
-				<input type="submit" name="Login" value="Sign in">
-			</fieldset>
+				<button class="submit right" type="submit" name="Login">Sign in</button>
+			</div>
         </form>
 	</div>
-	<div class="formdiv">
+	<div class="compartment">
 		<h2>Sign-up module</h2>
 		<form action="#" th:action="@{/RegisterUser}" method="POST">
-			<fieldset>
+			<div class ="content">
 				<p> Select username: <input type="text" name="username" required /> </p>
 				<p> Select password: <input type="password" name="password" required /> </p>
-				<input type="submit" name="Login" value="Sign up">
-			</fieldset>
+				<button class="submit right" type="submit" name="Login">Sign up</button>
+			</div>
 		</form>  
 	</div>	
 </body>
