added some error messages

--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Login.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Login.html
@@ -25,6 +25,8 @@
 				<button class="submit right" type="submit" name="Login">Sign up</button>
 			</div>
 		</form>  
-	</div>	
+	</div>
+	<div th:if="${error != null}" th:text="${error}">
+	</div>
 </body>
 </html>
