Completation of error management

--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
@@ -27,7 +27,7 @@
 		</form>  
 	</div>	
 	
-	<div th:if="${error != null}" th:text="${error}">
+	<div id="errorMain" th:if="${error != null}" th:text="${error}">
 	</div>
 	
 </body>
