--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
@@ -78,7 +78,7 @@
 		   </form>
     </div>
 
-	<div th:if="${error != null}" th:text="${error}">
+	<div id="errorMain" th:if="${error != null}" th:text="${error}">
 	</div>
 	
 </body>
