--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Login.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Login.html
@@ -26,7 +26,7 @@
 			</div>
 		</form>  
 	</div>
-	<div th:if="${error != null}" th:text="${error}">
+	<div id="errorMain" th:if="${error != null}" th:text="${error}">
 	</div>
 </body>
 </html>
