--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
@@ -139,7 +139,7 @@
 			        <br>
 			        <select id="song"
 			                name="songIds"
-			                multiple>
+			                multiple required>
 			        </select>
 			    </div>
 			    <button class="submit right" type="submit">Add to Playlist</button>
