--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Player.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Player.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Player Page</h1>
 	<div id ="playerMain" class="compartment">
-		<div class ="content thick">
+		<div class ="card thick">
 		    <h2 th:text="${song.title}"></h2>
 		    <img th:src="@{/FileHandler(fileName=${album.image})}" />
 		    <!-- Display other details of the song such as artist, album, year, genre, etc. -->
@@ -17,7 +17,9 @@
 		    <p>Album Year: <span th:text="${album.publicationYear}"></span></p>
 		    <p>Genre: <span th:text="${song.genre}"></span></p>
 		    <!-- Add an audio player for song playback -->
-		    <audio th:src="@{/FileHandler(fileName=${song.audio})}" controls></audio>
+		    <audio controls>
+		    	<source th:src="@{/FileHandler(fileName=${song.audio})}"></source>
+		    </audio>
 	    </div>
     </div>
 </body>
