better css ( for error)

--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
@@ -134,7 +134,7 @@
 		<form id="addSongsToPlaylistForm" method="post" th:action="@{/AddSongsToPlaylist}">
 			<div class ="content">
 				<input type="hidden" name="playlistId"/>
-			    <div>
+			    <div class = "card">
 			        <label for="song">Songs:</label>
 			        <br>
 			        <select id="song"
