--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Playlist.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Playlist.html
@@ -45,7 +45,7 @@
 		<form method="post" th:action="@{/AddSongsToPlaylist}">
 			<div class ="content">
 				<input type="hidden" name="playlistId" th:value="${playlistId}"/>
-			    <div>
+			    <div  class = "card">
 			        <label for="song">Songs:</label>
 			        <br>
 			        <select id="song"
