--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Player.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Player.html
@@ -21,6 +21,13 @@
 		    	<source th:src="@{/FileHandler(fileName=${song.audio})}"></source>
 		    </audio>
 	    </div>
+	    
+	    <div class = "footer">
+		   	<div class = "flex">
+				<a th:href="@{/GoToHome}" class = "card" th:text="Home"></a>		   	
+			</div>
+		</div>
+
     </div>
 </body>
 </html>
