--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
@@ -151,8 +151,12 @@
 	<div id = "playerMain" class = "compartment">
 	</div>
 	
-	<div class ="footer">
+	<div class = "footer">
+		<div class = "flex">
+			<a th:href="@{/GoToLogin}" class = "card" th:text="Logout"></a>		   	
+		</div>
 	</div>
+
 </body>
 
 </html>
