--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Reorder.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Reorder.html
@@ -22,6 +22,14 @@
 	        	<button class="submit right" type="submit">Save order</button>
 	        </div>
 	    </form>
+	    
+		<div class = "footer">
+			<div class = "flex">
+			    <a th:href="@{/GoToHome(playlistId=${playlistId})}" class = "card" th:text="Home">
+				</a>
+			</div>
+		</div>
+
 	</div>
 </body>
 </html>
