--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
@@ -78,11 +78,12 @@
 		     </div>
 		   </form>
 		   
+		   <div class = "footer">
+		   		<div class = "flex">
+					<a class="submit spaced" th:href="@{/GoToLogin}" th:text="Logout"></a>
+		   		</div>
+		   </div>
     </div>
-
-	<form action="#" th:action="@{/GoToLogin}" method="post" enctype="multipart/form-data">
-		<button class="submit right" type="submit">Logout</button>
-	</form>
 	
 	<div id="errorMain" th:if="${error != null}" th:text="${error}">
 	</div>
