Show playilst title and description in html

--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
@@ -46,7 +46,7 @@
 	    		<p> Song title: <input type="text" name="song_title" required /></p>
 	    		<p><select id="genre" name="song_genre" required>
 	            	<option value="">-- Choose genre --</option>
-	            	<option value="Rrock"> Rock </option>
+	            	<option value="Rock"> Rock </option>
 	            	<option value="Pop"> Pop </option>
 	            	<option value="Country"> Country </option>
 	            	<option value="Indie"> Indie </option>
