--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
@@ -107,7 +107,8 @@
 	
 	<div id = "playlistReference"></div>
 	<div id = "playlistMain" class = "compartment">
-	    <h2>Playlist</h2>
+	    <h2 id = "playlistTitle">Playlist</h2>
+	    <p id = "playlistDescription"></p>
 			<form id="removeSongsFromPlaylistForm" th:action="@{/RemoveSongsFromPlaylist}" method="post">
 				<div class ="content">
 			    <input type="hidden" name="playlistId"/>
